sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:8: error: ';' expected but 'else' found.
      else if (i>=0){echange(i+1,i);i-=1}
      ^