sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  do{
    var cond: Bool=false
    var i=0
    if (!plusPetit(i+1,i)){
      i+=1
      else if (i>=0){echange(i+1,i);i-=1}
      else (i+=1)
      
    
    }
    
  }while (cond)
}